fix period generation overlap issue

--- a/webapp/picchetto/grails-app/assets/stylesheets/application.css
+++ b/webapp/picchetto/grails-app/assets/stylesheets/application.css
@@ -63,6 +63,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    line-height: 20px;
 }
 
 .close:hover,
